# openrouter-provider

./: .autodocsignore  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
openrouter/: llms.py  message.py  openrouter.py  openrouter_provider.py
src/: OpenRouterProvider.py  message.py  openrouter.py  openrouter_provider.py
tests/: async.py  basic.py  image.py  ollama.py  provider.py  reasoning.py  stream.py  structured_output.py  test_message_reasoning.py  test_reasoning_config.py  test_timeout.py  tool.py
