[project]
name = "openrouter-provider"
version = "1.0.11"
description = "This is an unofficial wrapper of OpenRouter."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }

authors = [
  { name = "Keisuke Miyamto", email = "aichiboyhighschool@gmail.com" }
]

dependencies = [
  "openai",
  "pydantic",
  "Pillow",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
